# Evosim

./: .gitignore  CMakeLists.txt
docs/: devlog.md  planning.md
include/cell-pixel/: cell-pixel.h
include/energy-pixel/: energy-pixel.h
include/helper/: helper.h
include/neural-network/: individual.h  matrix.h  network.h  neural-network.h  population.h  species.h
include/tests/: tests.h
include/universe/: universe.h
src/: main.cpp  universe.cpp
src/neural-network/: individual.cpp  matrix.cpp  network.cpp  neural-network.cpp  population.cpp  species.cpp
tests/: individual_tests.cpp  matrix_tests.cpp  network_tests.cpp  population_tests.cpp  species_tests.cpp
